argo/stock-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: stock-app
  labels:
    app: stock-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-app
  template:
    metadata:
      labels:
        app: stock-app
    spec:
      containers:
        - name: stock-app
          image: ghcr.io/joranbergfeld/webshop/stock-app:latest
          ports:
            - containerPort: 15002
              protocol: TCP
          resources: { }
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
