argo/stock-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plane-registry
  name: plane-registry
spec:
  ports:
    - name: 15002-tcp
      port: 15002
      protocol: TCP
      targetPort: 15002
  selector:
    app: plane-registry
  sessionAffinity: None
  type: ClusterIP
